--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,29 @@
 .App {
   text-align: center;
 }
+html {
+  background-color: rgba(41, 41, 24, 0.781);
+}
+.recipes {
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.recipe {
+  min-width: 100px;
+  max-width: 200px;
+  background-color: white;
+  margin: 0.5em 0em 0.5em 0.5em;
+  border-radius: 10px;
+}
+
+.recipe > img {
+  width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.meal-description {
+  font-weight: bolder;
+  font-size: 1.2em;
+  padding: 0.5em;
+}
