--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 html {
-  background-color: rgba(41, 41, 24, 0.781);
+  color: black;
 }
 .recipes {
   display: flex;
@@ -26,4 +26,61 @@ html {
   font-weight: bolder;
   font-size: 1.2em;
   padding: 0.5em;
+}
+
+/* Recipe details */
+.image-ingredients {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+.image-ingredients > * {
+  width: 47%;
+}
+.image-ingredients > .img {
+  border-radius: 10px;
+  transform: scale(0.9);
+}
+.image-ingredients > .img > img {
+  width: 100%;
+  border-radius: 10px;
+}
+.ingredients {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.ingredient {
+  width: 20%;
+  padding: 5px;
+  font-weight: bolder;
+  margin: 2px;
+  border-radius: 5px;
+}
+.ingredient > img {
+  width: 100%;
+}
+.video-instructions {
+  border: solid 1px;
+  display: flex;
+  align-items: center;
+  padding: 0.5em;
+  justify-content: space-around;
+}
+.video-instructions > *{
+  width: 48%;
+  border: solid 1px;
+  
+}
+.instructions {
+  padding: 0.5em;
+  text-align: left;
+  font-family: monospace;
+  font-size: 1.3em;
+}
+.steps {
+  list-style: "🥣";
+  padding: 5px;
+  text-align: justify;
+  font-weight: bolder;
 }
